Create URI-compatible resource URLs.